--- a/loja/src/app/login/login.component.html
+++ b/loja/src/app/login/login.component.html
@@ -1,3 +1,9 @@
+<div class="row"> 
+  <p style="background-color: white" align="right" >
+    <b>{{nomeUsuario}}</b><button class="btn btn-dark" (click)="fazerLogoff();">sair</button>
+  </p>
+</div>
+
 <div class="row">
 
     <div class="col cadastrado border-secondary">
@@ -5,19 +11,19 @@
         <form action="/action_page.php">
           <h2>Já sou cadastrado</h2>
             <div class="form-group" >
-              <label for="exampleInputEmail1">Email</label>
-              <input [(ngModel)]="obj.email" type="email" class="form-control" id="InputEmail1" placeholder="Digite seu email aqui..." required>
+              <label>Email</label>
+              <input [(ngModel)]="obj.email" class="form-control" placeholder="Digite seu email aqui..." required>
             </div>
 
             <div class="form-group">
-              <label for="exampleInputPassword1">Senha</label>
-              <input [(ngModel)]="obj.senha" type="password" class="form-control" id="InputPassword1" placeholder="Digite sua senha aqui..." 
+              <label>Senha</label>
+              <input type="password" [(ngModel)]="obj.senha" class="form-control" placeholder="Digite sua senha aqui..." 
               pattern="^.{6,10}$" title="A senha deve conter no mínimo 6 caracteres e máximo 10" maxlength="14" required>
             </div>
 
             <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
+              <input type="checkbox" class="form-check-input">
+              <label class="form-check-label">Lembrar de mim</label>
             </div>
 
             <button (click)="fazerLogin()" type="submit" class="btn btn-secondary">Continuar</button>
