--- a/loja/src/app/reenvio-senha/reenvio-senha.component.html
+++ b/loja/src/app/reenvio-senha/reenvio-senha.component.html
@@ -8,7 +8,7 @@
             <div class="form-group">
               <label for="exampleInputEmail1">Informe seu e-mail</label>
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Digite aqui seu e-mail..." required><br>
-              <button type="submit" class="btn btn-dark">Enviar</button>
+              <button class="btn btn-dark">Enviar</button>
             </div>
     </form>
     </div>    
